[package]
name = "dpcl"
version = "0.1.0"
edition = "2021"
authors = [
  "Michael Ekstrand <md@ekstrandom.net>"
]
license = "MIT"

[dependencies]
# basic reporting support
log = "^0.4"
thiserror = "^1.0"

# scripting
molt = "^0.3.1"

# data structures
petgraph = "^0.6.2"

# data and metadata
md-5 = "^0.10"
sha1 = "^0.10"
toml = "^0.5"
bincode = "^1.3"
serde = "^1.0"

# libraries for CLI
indicatif = { version="^0.16", optional=true}
structopt = { version="^0.3", optional=true}
anyhow = "^1"

[dev-dependencies]
async-trait = "^0.1"
cucumber = "^0.13"
futures = "^0.3"

[features]
default = ["cli"]
cli = ["structopt", "indicatif"]

[[bin]]
name = "dpcl"
required-features = ["cli"]

[[test]]
name = "features"
harness = false
